# firecrawl-tests

./: README.md  example.env  pyproject.toml
firecrawl_0/: README.md  main.py
firecrawl_1/: README.md  main.py
firecrawl_2/: README.md  main.py
firecrawl_3/: main.py
